--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -2,16 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 /*===== VARIABLES CSS =====*/
---header-height: 3rem;
+:root{
+    --header-height: 3rem;
     --font-semi: 600;
-
     /*===== Colores =====*/
     /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
     /* HSL color mode */
     --hue-color: 224;
     --first-color: hsl(var(--hue-color), 89%, 60%);
     --second-color: hsl(var(--hue-color), 56%, 12%);
-
+    
     /*===== Fuente y tipografia =====*/
     --body-font: 'Poppins', sans-serif;
 
@@ -30,12 +30,19 @@
     --z-back: -10;
     --z-fixed: 100;
 
-    @media screen and (min-width: 968px){
+    @media screen and (min-width: 968px)
+    {
         --big-font-size: 3.5rem;
         --h2-font-size: 2rem;
         --normal-font-size: 1rem;
         --smaller-font-size: .875rem;
 }
+
+}
+
+
+    
+
 
 /*===== BASE =====*/
 *,::before,::after{
